--- a/javascript/javascript02.html
+++ b/javascript/javascript02.html
@@ -407,13 +407,17 @@
         //     document.write(arr[1]);
         //     document.write(arr[2][0]);
         //     document.write(arr[2][1]);
+
+        //     document.querySelector(".sample01_result").innerHTML = x + "<br>" + y + "<br>" + z
         // }
 
         // //05 배열 : 데이터 불러오기 : 갯수 구하기
         // {
         //     const arr = [100, 200, "javascript"];
 
-        //     // document.write(arr.length); //배열의 갯수를 뽑아줌
+        //     document.write(arr.length); //배열의 갯수를 뽑아줌
+
+        //     document.querySelector(".sample01_result").innerHTML = x + "<br>" + y + "<br>" + z
         // }
 
         // //06 배열 : 데이터 불러오기 : for문
@@ -429,6 +433,8 @@
         //     for(let i=0; i<arr.length; i++){
         //         document.write(arr[i]);
         //     };
+
+        //     document.querySelector(".sample01_result").innerHTML = x + "<br>" + y + "<br>" + z
         // }
 
         // //07. 배열 : 데이터 불러오기 : forEach();
@@ -444,6 +450,8 @@
         //         document.write(i);
         //         document.write(array);
         //     });
+
+        //     document.querySelector(".sample01_result").innerHTML = x + "<br>" + y + "<br>" + z
         // }
 
         // //08. 배열에 데이터 불러오기 : for of    //react에서 많이 씀
@@ -453,6 +461,8 @@
         //     for(let i of arr){
         //         document.write(i);
         //     };
+
+        //     document.querySelector(".sample01_result").innerHTML = x + "<br>" + y + "<br>" + z
         // }
 
         // //09. 배열 : 데이터 불러오기 : for in
@@ -463,6 +473,8 @@
         //         // document.write(i);
         //         document.write(arr[i]);
         //     };
+
+        //     document.querySelector(".sample01_result").innerHTML = x + "<br>" + y + "<br>" + z
         // }
 
         // //10. 배열 : 데이터 불러오기 : map()
@@ -488,6 +500,8 @@
         //         document.write(index);
         //         document.write(array);
         //     });
+
+        //     document.querySelector(".sample01_result").innerHTML = x + "<br>" + y + "<br>" + z
         // }
 
         // //
@@ -505,7 +519,7 @@
         //     document.write(el);
         // });
 
-        // // map() 이용해서 하나씩 출력
+        // map() 이용해서 하나씩 출력
         // {
         //     const arr = [100, 200, 300, 400, 500];
 
