--- a/javascript/javascript02.html
+++ b/javascript/javascript02.html
@@ -504,22 +504,19 @@
         //     document.querySelector(".sample01_result").innerHTML = x + "<br>" + y + "<br>" + z
         // }
 
-        // //
-        // const arr = [1, 2, 3, 4, 5, 6, 7, 8, 9];
-
-        // // for문을 이용해서 하나씩 출력
+        // // -- for문을 이용 하나씩 출력
         // for (i = 1; i <= 9; i++) {
         //     document.write(i);
         // }
 
-        // // forEach 이용해서 하나씩 출력
+        // // -- forEach 이용 하나씩 출력
         // const num = [1, 2, 3, 4, 5, 6, 7, 8, 9];
 
         // num.forEach(function (el) {
         //     document.write(el);
         // });
 
-        // map() 이용해서 하나씩 출력
+        // // -- map() 이용 하나씩 출력
         // {
         //     const arr = [100, 200, 300, 400, 500];
 
@@ -528,21 +525,20 @@
         //     });
         // }
 
-        // // for in 이용해서 하나씩 출력
+        // // -- for in 이용 하나씩 출력
         // {
         //     const arr = [1, 2, 3, 4, 5, 6, 7, 8, 9];
 
-        //     for (let i in arr) {
-        //         document.write(i);
+        //     for (i in arr) {
         //         document.write(arr[i]);
         //     };
         // }
 
-        // // for of 이용해서 하나씩 출력
+        // // -- for of 이용 하나씩 출력
         // {
         //     const arr = [1, 2, 3, 4, 5, 6, 7, 8, 9];
 
-        //     for (let i of arr) {
+        //     for (i of arr) {
         //         document.write(i);
         //     };
         // }
