--- a/css/layout04.html
+++ b/css/layout04.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>layout04</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -16,16 +16,22 @@
                 웹 페이지에서의 레이아웃은 디자인과 외관의 결정을 짓는 중요한 요소이다.
             </p>
 
+            <hr>
+
             <h2 class="t_tit2">float</h2>
             <p class="t_desc2">
                 float속성은 복잡한 형태의 레이아웃을 구성하는데 필요한 핵심 속성으로써 떠있게, 흐르도록 하는 속성입니다.<br>
                 해당 레이아웃은 float을 이용해서 구성하였습니다.
             </p>
 
+            <hr>
+
             <h2 class="t_tit2">flex</h2>
             <p class="t_desc2">
                 flex속성은 구성 요소를 유연하고 동적이게 만드는 박스 모델입니다.<br>
             </p>
+
+            <hr>
             
             <h2 class="t_tit2">grid</h2>
             <p class="t_desc2">
