--- a/html/layout05.html
+++ b/html/layout05.html
@@ -42,15 +42,221 @@
         </nav>
         <div class="main_refer">
             <div class="document">
-                <h2 class="t_tit">레이아웃5</h2>
+                <h2 class="t_tit">레이아웃3</h2>
                 <p class="t_desc">
-                    이번 레이아웃은 전체 영역이 들어간 구조입니다.
-                    실제 사이트에서 이런 구조를 많이 사용하며, 컨테이너를 만들어서
-                    가운데 영역을 설정합니다.
+                    기본적인 레이아웃 구성 요소
                 </p>
                 <div class="t_iframe">
-                    
+                    <iframe src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2Fi0yArofcXtFHtLmBkC0q9d%2F%25EA%25B7%25B8%25EB%25A6%25AC%25EB%2593%259C%3Fnode-id%3D29%253A68" allowfullscreen></iframe>
                 </div>
+
+                <h3 class="t_tit">float을 이용한 레이아웃</h3>
+                <p class="t_desc2">
+                    float 요소를 이용해 세로로만 나열이 아닌 가로로도 배치하여 레이아웃을 구성
+                </p>
+            <div class="t_code">
+<pre><code class="language-css">    * {
+        margin: 0;
+        height: 0;
+    }
+    #wrap {
+        width: 100%;
+        margin: 0 auto;
+        background-color: #000;
+    }
+    #header {
+        width: 100%;
+        height: 100px;
+        background-color: #EEEBE9;
+    }
+    #nav {
+        width: 100%;
+        height: 100px;
+        background-color: #B9AAA5;
+    }
+    #main {
+        width: 100%;
+        height: 780px;
+        background-color: #886F65;
+    }
+    #footer {
+        width: 100%;
+        height: 100px;
+        background-color: #4E342E;
+    }
+    .container {
+        width: 1200px;
+        height: inherit;
+        margin: 0 auto;
+        background-color: rgba(0,0,0,0.3);
+        overflow: hidden;
+    }
+    .contents .cont1 {
+        width: 100%;
+        height: 100px;
+        background-color: #74574A;
+        float: left;
+    }
+    .contents .cont2 {
+        width: 100%;
+        height: 200px;
+        background-color: #684D43;
+        float: left;
+    }
+    .contents .cont3 {
+        width: 50%;
+        height: 480px;
+        background-color: #594139;
+        float: left;
+    }
+    .contents .cont4 {
+        width: 50%;
+        height: 480px;
+        background-color: #4A352F;
+        float: left;
+    }
+</code></pre>
+            </div>
+
+            <br><br>
+
+            <h3 class="t_tit">flex을 이용한 레이아웃</h3>
+            <p class="t_desc2">
+                flex 안에 있는 요소들을 선언하여, 유연하게 배치하여 레이아웃 구성
+            </p>
+            <div class="t_code">
+<pre><code class="language-css">    * {
+        margin: 0;
+    }
+    #wrap {
+        width: 100%;
+    }
+    #header {
+        width: 100%;
+        height: 100px;
+        background-color: #EEEBE9;
+    }
+    #nav {
+        width: 100%;
+        height: 100px;
+        background-color: #B9AAA5;
+    }
+    #main {
+        width: 100%;
+        height: 780px;
+        background-color: #886F65;
+    }
+    #footer {
+        width: 100%;
+        height: 100px;
+        background-color: #4E342E;
+    }
+    .container {
+        width: 1200px;
+        height: inherit;
+        background-color: rgba(0,0,0,0.3);
+        margin: 0 auto;
+    }
+    .left {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .contents .cont1 {
+        width: 100%;
+        height: 100px;
+        background-color: #74574A;
+    }
+    .right {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .contents .cont2 {
+        width: 100%;
+        height: 200px;
+        background-color: #684D43;
+    }
+    .contents .cont3 {
+        width: 50%;
+        height: 480px;
+        background-color: #594139;
+    }
+    .contents .cont4 {
+        width: 50%;
+        height: 480px;
+        background-color: #4A352F;
+    }
+</code></pre>
+            </div>
+
+            <br><br>
+
+            <h3 class="t_tit">grid를 이용한 레이아웃</h3>
+            <p class="t_desc2">
+                grid 시스템을 이용한 레이아웃 구성
+            </p>
+            <div class="t_code">
+<pre><code class="language-css">    * {
+        margin: 0;
+    }
+    #wrap {}
+    #header {
+        height: 100px;
+        background-color: #EEEBE9;
+    }
+    #nav {
+        height: 100px;
+        background-color: #B9AAA5;
+    }
+    #main {
+        height: 780px;
+        background-color: #886F65;
+    }
+    #footer {
+        height: 100px;
+        background-color: #4E342E;
+    }
+    .container {
+        width: 1200px;
+        height: inherit;
+        margin: 0 auto;
+        background-color: rgba(0,0,0,0.3);
+    }
+    .contents {
+        display: grid;
+        grid-template-areas: 
+            "cont1 cont1"
+            "cont2 cont2"
+            "cont3 cont4"
+        ;
+        grid-template-columns: 50% 50%;
+        grid-template-rows: 100px 200px 480px;
+    }
+    .contents .cont1 {
+        background-color: #74574A;
+        grid-area: cont1;
+    }
+    .contents .cont2 {
+        background-color: #684D43;
+        grid-area: cont2;
+    }
+    .contents .cont3 {
+        background-color: #594139;
+        grid-area: cont3;
+    }
+    .contents .cont4 {
+        background-color: #4A352F;
+        grid-area: cont4;
+    }
+</code></pre>
+            </div>
+            <summary>결과</summary>
+            <div class="iframe">
+                <iframe height="600" style="width: 100%;" scrolling="no" title="layout03-flaot" src="https://codepen.io/kdb6/embed/LYdjoKR?default-tab=result" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+                    See the Pen <a href="https://codepen.io/kdb6/pen/LYdjoKR">
+                    layout03-flaot</a> by KDB6 (<a href="https://codepen.io/kdb6">@kdb6</a>)
+                    on <a href="https://codepen.io">CodePen</a>.
+                </iframe>
+            </div>
             </div>
         </div>
     </main>
