--- a/html/layout03.html
+++ b/html/layout03.html
@@ -42,12 +42,12 @@
         </nav>
         <div class="main_refer">
             <div class="document">
-                <h2 class="t_tit">레이아웃3</h2>
+                <h2 class="t_tit">Layout 03</h2>
                 <p class="t_desc">
                     기본적인 레이아웃 구성 요소
                 </p>
                 <div class="t_iframe">
-                    <iframe src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2Fi0yArofcXtFHtLmBkC0q9d%2F%25EA%25B7%25B8%25EB%25A6%25AC%25EB%2593%259C%3Fnode-id%3D29%253A68" allowfullscreen></iframe>
+                    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2Fi0yArofcXtFHtLmBkC0q9d%2F%25EA%25B7%25B8%25EB%25A6%25AC%25EB%2593%259C%3Fnode-id%3D29%253A68" allowfullscreen></iframe>
                 </div>
 
                 <h3 class="t_tit">float을 이용한 레이아웃</h3>
@@ -124,7 +124,7 @@
 
             <br><br>
 
-            <h3 class="t_tit">flex을 이용한 레이아웃</h3>
+            <h3 class="t_tit">flex를 이용한 레이아웃</h3>
             <p class="t_desc2">
                 flex 안에 있는 요소들을 선언하여, 유연하게 배치하여 레이아웃 구성
             </p>
@@ -240,11 +240,12 @@
             </div>
             <summary>결과</summary>
             <div class="iframe">
-                <iframe height="600" style="width: 100%;" scrolling="no" title="layout03-flaot" src="https://codepen.io/kdb6/embed/LYdjoKR?default-tab=result" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
-                    See the Pen <a href="https://codepen.io/kdb6/pen/LYdjoKR">
-                    layout03-flaot</a> by KDB6 (<a href="https://codepen.io/kdb6">@kdb6</a>)
-                    on <a href="https://codepen.io">CodePen</a>.
-                </iframe>
+                <p class="codepen" data-height="600" data-default-tab="result" data-slug-hash="YzaEapp" data-user="kdb6" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+                  <span>See the Pen <a href="https://codepen.io/kdb6/pen/YzaEapp">
+                  layout03-float</a> by KDB6 (<a href="https://codepen.io/kdb6">@kdb6</a>)
+                  on <a href="https://codepen.io">CodePen</a>.</span>
+                </p>
+                <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
             </div>
             </div>
         </div>
