--- a/html/layout01.html
+++ b/html/layout01.html
@@ -42,12 +42,12 @@
         </nav>
         <div class="main_refer">
             <div class="document">
-                <h2 class="t_tit">레이아웃1</h2>
+                <h2 class="t_tit">Layout 01</h2>
                 <p class="t_desc">
                     기본적인 레이아웃 구성 요소
                 </p>
                 <div class="t_iframe">
-                    <iframe src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2Fi0yArofcXtFHtLmBkC0q9d%2F%25EA%25B7%25B8%25EB%25A6%25AC%25EB%2593%259C%3Fnode-id%3D0%253A1" allowfullscreen></iframe>
+                    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2Fi0yArofcXtFHtLmBkC0q9d%2F%25EA%25B7%25B8%25EB%25A6%25AC%25EB%2593%259C%3Fnode-id%3D0%253A1" allowfullscreen></iframe>
                 </div>
 
                 <h3 class="t_tit">float을 이용한 레이아웃</h3>
@@ -99,7 +99,7 @@
 
             <br><br>
 
-            <h3 class="t_tit">flex을 이용한 레이아웃</h3>
+            <h3 class="t_tit">flex를 이용한 레이아웃</h3>
             <p class="t_desc2">
                 flex 안에 있는 요소들을 선언하여, 유연하게 배치하여 레이아웃 구성
             </p>
