--- a/html/layout04.html
+++ b/html/layout04.html
@@ -42,14 +42,14 @@
         </nav>
         <div class="main_refer">
             <div class="document">
-                <h2 class="t_tit">레이아웃4</h2>
+                <h2 class="t_tit">Layout 04</h2>
                 <p class="t_desc">
                     이번 레이아웃은 전체 영역이 들어간 구조입니다.
                     실제 사이트에서 이런 구조를 많이 사용하며, 컨테이너를 만들어서
                     가운데 영역을 설정합니다.
                 </p>
                 <div class="t_iframe">
-                    <iframe src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2Fi0yArofcXtFHtLmBkC0q9d%2F%25EA%25B7%25B8%25EB%25A6%25AC%25EB%2593%259C%3Fnode-id%3D29%253A95" allowfullscreen></iframe>
+                    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2Fi0yArofcXtFHtLmBkC0q9d%2F%25EA%25B7%25B8%25EB%25A6%25AC%25EB%2593%259C%3Fnode-id%3D29%253A95" allowfullscreen></iframe>
                 </div>
 
                 <h3 class="t_tit">float을 이용한 레이아웃</h3>
@@ -95,6 +95,95 @@
     }
 </code></pre>
             </div>
+
+            <h3 class="t_tit">flex를 이용한 레이아웃</h3>
+                <p class="t_desc2">
+                    flex 안에 있는 요소들을 선언하여, 유연하게 배치하여 레이아웃 구성
+                </p>
+            <div class="t_code">
+<pre><code class="language-css">    * {
+        margin: 0;
+        padding: 0;
+    }
+    #header {
+        height: 100px;
+        background-color: #e0f2f1;
+    }
+    #nav {
+        height: 300px;
+        background-color: #80cbc4;
+    }
+    #section {
+        height: 580px;
+        background-color: #26a694;
+    }
+    #footer {
+        height: 100px;
+        background-color: #00897b;
+    }
+    .container {
+        width: 1200px;
+        height: inherit;
+        margin: 0 auto;
+        background-color: rgba(0, 0, 0, 0.3);
+    }
+    @media (max-width: 1220px){
+        .container {
+            width: 96%;
+        }
+    }
+    @media (max-width: 768px){
+        .container {
+            width: 100%;
+        }
+    }
+</code></pre>
+            </div>
+
+            <h3 class="t_tit">grid를 이용한 레이아웃</h3>
+                <p class="t_desc2">
+                    grid 시스템을 이용한 레이아웃 구성
+                </p>
+            <div class="t_code">
+<pre><code class="language-css">    * {
+        margin: 0;
+        padding: 0;
+    }
+    #header {
+        height: 100px;
+        background-color: #e0f2f1;
+    }
+    #nav {
+        height: 300px;
+        background-color: #80cbc4;
+    }
+    #section {
+        height: 580px;
+        background-color: #26a694;
+    }
+    #footer {
+        height: 100px;
+        background-color: #00897b;
+    }
+    .container {
+        width: 1200px;
+        height: inherit;
+        margin: 0 auto;
+        background-color: rgba(0, 0, 0, 0.3);
+    }
+    @media (max-width: 1220px){
+        .container {
+            width: 96%;
+        }
+    }
+    @media (max-width: 768px){
+        .container {
+            width: 100%;
+        }
+    }
+</code></pre>
+            </div>
+
             <summary>결과</summary>
             <div class="iframe">
                 <iframe height="600" style="width: 100%;" scrolling="no" title="layout04-float" src="https://codepen.io/kdb6/embed/RwMZmpR?default-tab=result" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
