--- a/html/layout05.html
+++ b/html/layout05.html
@@ -42,12 +42,12 @@
         </nav>
         <div class="main_refer">
             <div class="document">
-                <h2 class="t_tit">레이아웃3</h2>
+                <h2 class="t_tit">Layout 05</h2>
                 <p class="t_desc">
                     기본적인 레이아웃 구성 요소
                 </p>
                 <div class="t_iframe">
-                    <iframe src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2Fi0yArofcXtFHtLmBkC0q9d%2F%25EA%25B7%25B8%25EB%25A6%25AC%25EB%2593%259C%3Fnode-id%3D29%253A68" allowfullscreen></iframe>
+                    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2Fi0yArofcXtFHtLmBkC0q9d%2F%25EA%25B7%25B8%25EB%25A6%25AC%25EB%2593%259C%3Fnode-id%3D544%253A2" allowfullscreen></iframe>
                 </div>
 
                 <h3 class="t_tit">float을 이용한 레이아웃</h3>
@@ -120,7 +120,7 @@
 
             <br><br>
 
-            <h3 class="t_tit">flex을 이용한 레이아웃</h3>
+            <h3 class="t_tit">flex를 이용한 레이아웃</h3>
             <p class="t_desc2">
                 flex 안에 있는 요소들을 선언하여, 유연하게 배치하여 레이아웃 구성
             </p>
@@ -128,62 +128,54 @@
 <pre><code class="language-css">    * {
         margin: 0;
     }
-    #wrap {
-        width: 100%;
-    }
+    #wrap {}
     #header {
-        width: 100%;
         height: 100px;
         background-color: #EEEBE9;
     }
     #nav {
-        width: 100%;
         height: 100px;
         background-color: #B9AAA5;
     }
     #main {
-        width: 100%;
         height: 780px;
         background-color: #886F65;
     }
     #footer {
-        width: 100%;
         height: 100px;
         background-color: #4E342E;
     }
     .container {
         width: 1200px;
         height: inherit;
-        background-color: rgba(0,0,0,0.3);
         margin: 0 auto;
+        background-color: rgba(0,0,0,0.3);
     }
-    .left {
-        display: flex;
-        flex-wrap: wrap;
+    .contents {
+        display: grid;
+        grid-template-areas: 
+            "cont1 cont1"
+            "cont2 cont2"
+            "cont3 cont4"
+        ;
+        grid-template-columns: 50% 50%;
+        grid-template-rows: 100px 200px 480px;
     }
     .contents .cont1 {
-        width: 100%;
-        height: 100px;
         background-color: #74574A;
-    }
-    .right {
-        display: flex;
-        flex-wrap: wrap;
+        grid-area: cont1;
     }
     .contents .cont2 {
-        width: 100%;
-        height: 200px;
         background-color: #684D43;
+        grid-area: cont2;
     }
     .contents .cont3 {
-        width: 50%;
-        height: 480px;
         background-color: #594139;
+        grid-area: cont3;
     }
     .contents .cont4 {
-        width: 50%;
-        height: 480px;
         background-color: #4A352F;
+        grid-area: cont4;
     }
 </code></pre>
             </div>
@@ -251,11 +243,12 @@
             </div>
             <summary>결과</summary>
             <div class="iframe">
-                <iframe height="600" style="width: 100%;" scrolling="no" title="layout03-flaot" src="https://codepen.io/kdb6/embed/LYdjoKR?default-tab=result" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
-                    See the Pen <a href="https://codepen.io/kdb6/pen/LYdjoKR">
-                    layout03-flaot</a> by KDB6 (<a href="https://codepen.io/kdb6">@kdb6</a>)
-                    on <a href="https://codepen.io">CodePen</a>.
-                </iframe>
+                <p class="codepen" data-height="600" data-default-tab="result" data-slug-hash="gOeXeWG" data-user="kdb6" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+                  <span>See the Pen <a href="https://codepen.io/kdb6/pen/gOeXeWG">
+                  layout05-float</a> by KDB6 (<a href="https://codepen.io/kdb6">@kdb6</a>)
+                  on <a href="https://codepen.io">CodePen</a>.</span>
+                </p>
+                <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
             </div>
             </div>
         </div>
