--- a/javascript/effect/quizeffect01.html
+++ b/javascript/effect/quizeffect01.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>퀴즈 이펙트</title>
+    <link href="https://webfontworld.github.io/DungGeunMo/DungGeunMo.css" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -49,8 +50,13 @@
             height: calc(100% - 10px);
             box-sizing: border-box;
         }
-        #header h1 {}
-        #header nav {}
+        #header h1 {
+            padding: 3px 3px 5px 10px;
+            font-family: 'DungGeunMo';
+        }
+        #header nav {
+            padding-right: 10px;
+        }
         #header nav li {
             display: inline;
         }
@@ -58,6 +64,7 @@
             color: #fff;
             padding: 0 10px;
             border: 1px dashed #fff;
+            font-family: 'DungGeunMo';
         }
     </style>
 </head>
