--- a/javascript/javascript11.html
+++ b/javascript/javascript11.html
@@ -40,13 +40,32 @@
         </nav>
     </header>
     <!-- //header -->
+
     <main id="main">
+        <div class="main_menu">
+            <ul>
+                <li><a href="#">01. 이벤트 메서드 : addEventListener("click") : 클릭 시</a></li>
+                <li><a href="#">02. 이벤트 메서드 : addEventListener("scroll") : 스크롤 시</a></li>
+                <li><a href="#">03. 이벤트 메서드 : addEventListener("resize") : 브라우저 사이즈 변경 시</a></li>
+                <li><a href="#">04. 이벤트 메서드 : addEventListener("selectstart") : 텍스트 선택 시작 했을 시에</a></li>
+                <br>
+                <li><a href="#">05. 이벤트 메서드 : addEventListener("mousedown") : 마우스 버튼 눌렀을 시에</a></li>
+                <li><a href="#">06. 이벤트 메서드 : addEventListener("mouseup") : 마우스 버튼 뗐을 시에</a></li>
+                <li><a href="#">07. 이벤트 메서드 : addEventListener("mousemove") : 마우스 움직일 시</a></li>
+                <br>
+                <li><a href="#">08. 이벤트 메서드 : addEventListener("drag") : 드래그 중일 시</a></li>
+                <li><a href="#">09. 이벤트 메서드 : addEventListener("dragstart") : 드래그 시작 시</a></li>
+                <li><a href="#">10. 이벤트 메서드 : addEventListener("dragend") : 드래그 끝날 시</a></li>
+            </ul>
+        </div>
     </main>
     <!-- //main -->
+
     <footer id="footer">
         <a href="mailto:ipkg7210@gmail.com">ipkg7210@gmail.com</a>
     </footer>
     <!-- //footer -->
+
     <script src="assets/css/js/highlight.min.js"></script>
     <script>hljs.highlightAll();</script>
 </body>
