--- a/javascript/javascript01.html
+++ b/javascript/javascript01.html
@@ -44,26 +44,27 @@
     <!-- //header -->
 
     <main id="main">
-        <div class="main_menu"></div>
-        <ul>
-            <li><a href="#sample01">01. 변수 : 데이터 저장</a></li>
-            <li><a href="#sample02">02. 변수 : 데이터 저장 + 데이터 변경</a></li>
-            <li><a href="#sample03">03. 변수 : 데이터 저장 + 데이터 변경 + 데이터 추가</a></li>
-            <li><a href="#sample04">04. 변수 : 지역 변수 + 전역 변수 + 매개 변수</a></li>
-            <li><a href="#sample05">05. 상수 : 데이터 저장 + 데이터 변경(X)</a></li>
-            <li><a href="#sample06">06. 배열 : 데이터 저장(여러개) : 표현 방법1</a></li>
-            <li><a href="#sample07">07. 배열 : 데이터 저장(여러개) : 표현 방법2</a></li>
-            <li><a href="#sample08">08. 배열 : 데이터 저장(여러개) : 표현 방법3</a></li>
-            <li><a href="#sample09">09. 배열 : 데이터 저장(여러개) : 표현 방법4</a></li>
-            <li><a href="#sample10">10. 객체 : 데이터 저장(키와 값) : 표현 방법1</a></li>
-            <li><a href="#sample11">11. 객체 : 데이터 저장(키와 값) : 표현 방법2</a></li>
-            <li><a href="#sample12">12. 객체 : 데이터 저장(키와 값) : 표현 방법3</a></li>
-            <li><a href="#sample13">13. 객체 : 데이터 저장(키와 값) : 표현 방법4</a></li>
-            <li><a href="#sample14">14. 객체 : 데이터 저장(키와 값) : 표현 방법5</a></li>
-            <li><a href="#sample15">15. 객체 : 데이터 저장(키와 값) : 표현 방법6</a></li>
-            <li><a href="#sample16">16. 객체 : 데이터 저장(키와 값) : 표현 방법7</a></li>
-            <li><a href="#sample17">17. 객체 : 데이터 저장(키와 값) : 표현 방법8</a></li>
-        </ul>
+        <div class="main_menu">
+            <ul>
+                <li><a href="#sample01">01. 변수 : 데이터 저장</a></li>
+                <li><a href="#sample02">02. 변수 : 데이터 저장 + 데이터 변경</a></li>
+                <li><a href="#sample03">03. 변수 : 데이터 저장 + 데이터 변경 + 데이터 추가</a></li>
+                <li><a href="#sample04">04. 변수 : 지역 변수 + 전역 변수 + 매개 변수</a></li>
+                <li><a href="#sample05">05. 상수 : 데이터 저장 + 데이터 변경(X)</a></li>
+                <li><a href="#sample06">06. 배열 : 데이터 저장(여러개) : 표현 방법1</a></li>
+                <li><a href="#sample07">07. 배열 : 데이터 저장(여러개) : 표현 방법2</a></li>
+                <li><a href="#sample08">08. 배열 : 데이터 저장(여러개) : 표현 방법3</a></li>
+                <li><a href="#sample09">09. 배열 : 데이터 저장(여러개) : 표현 방법4</a></li>
+                <li><a href="#sample10">10. 객체 : 데이터 저장(키와 값) : 표현 방법1</a></li>
+                <li><a href="#sample11">11. 객체 : 데이터 저장(키와 값) : 표현 방법2</a></li>
+                <li><a href="#sample12">12. 객체 : 데이터 저장(키와 값) : 표현 방법3</a></li>
+                <li><a href="#sample13">13. 객체 : 데이터 저장(키와 값) : 표현 방법4</a></li>
+                <li><a href="#sample14">14. 객체 : 데이터 저장(키와 값) : 표현 방법5</a></li>
+                <li><a href="#sample15">15. 객체 : 데이터 저장(키와 값) : 표현 방법6</a></li>
+                <li><a href="#sample16">16. 객체 : 데이터 저장(키와 값) : 표현 방법7</a></li>
+                <li><a href="#sample17">17. 객체 : 데이터 저장(키와 값) : 표현 방법8</a></li>
+            </ul>
+        </div>
 
         <div class="main_sample">
             <!-- 01 -->
