--- a/javascript/effect/quizeffect02.html
+++ b/javascript/effect/quizeffect02.html
@@ -608,11 +608,11 @@
 
 <body>
     <header id="header">
-        <h1>Quiz <em>정답 확인하기 유형</em></h1>
+        <h1>Quiz <em>주관식 유형</em></h1>
         <nav>
             <ul>
-                <li class="active"><a href="quizEffect01.html">1</a></li>
-                <li><a href="quizEffect02.html">2</a></li>
+                <li><a href="quizEffect01.html">1</a></li>
+                <li class="active"><a href="quizEffect02.html">2</a></li>
                 <li><a href="quizEffect03.html">3</a></li>
                 <li><a href="quizEffect04.html">4</a></li>
                 <li><a href="quizEffect05.html">5</a></li>
@@ -661,7 +661,7 @@
     <!-- //main -->
 
     <footer id="footer">
-        <a href="mailto:webstoryboy@naver.com">webstoryboy@naver.com</a>
+        <a href="mailto:ipkg7210@gmail.com">ipkg7210@gmail.com</a>
     </footer>
     <!-- //footer -->
 
@@ -673,27 +673,18 @@
         const quizConfirm = document.querySelector(".quiz__answer .confirm");     // 정답 확인 버튼
         const quizResult = document.querySelector(".quiz__answer .result");       // 정답 결과
         const quizDog = document.querySelector(".quiz__view .dog");                 // 강아지
-        
+
         // 문제 정보
         const answerType = "웹디자인기능사";
-        const answerNum = 1;
-        const answerAsk = "인접하는 두 색의 경계 부분에 색상, 명도, 채도의 대비가 더욱 강하게 일어나는 현상을 무엇이라고 하는가?";
-        const answerResult = "연변대비";
+        const answerNum = "2";
+        const answerAsk = "기업의 새로운 이념 구축에 필요한 이미지와 커뮤니케이션 시스템을 의도적, 계획적으로 만들어내는 기업이미지통합 전략은 무엇인가요?";
+        const answerResult = "CIP";
 
-        // 문제 출력
-        quizType.innerText = answerType;
-        quizNumber.innerText = answerNum + ".";
-        quizAsk.innerText = answerAsk;
-        quizResult.innerText = answerResult;
-
-        // 정답 확인
-        // 정답 버튼 클릭 시 확인 버튼을 안보이게.. 숨겨지 정답은 보이게..
-        // 정답을 확인하면 강아지가 웃고 있어여 함  // 클래스 like를 추가
-        quizConfirm.addEventListener("click", function(){
-            quizConfirm.style.display = "none";
-            quizResult.style.display = "block";
-            quizDog.classList.add("like");
-        });
+        // 문재 출력
+        quizType.textContent = answerType;
+        quizNumber.textContent = answerNum;
+        quizAsk.textContent = answerAsk;
+        quizResult.textContent = answerResult;
     </script>
 </body>
 
