--- a/javascript/effect/quizeffect01.html
+++ b/javascript/effect/quizeffect01.html
@@ -12,6 +12,7 @@
         * {
             margin: 0;
             padding: 0;
+            box-sizing: border-box;
         }
 
         *,
@@ -102,11 +103,9 @@
             background: #fff;
             text-align: center;
             padding: 20px;
-            position: absolute;
-            left: 0;
-            bottom: 0;
             width: 100%;
             box-sizing: border-box;
+            margin-top: 200px;
         }
 
         #footer a {
