--- a/javascript/effect/quizeffect02.html
+++ b/javascript/effect/quizeffect02.html
@@ -12,6 +12,7 @@
         * {
             margin: 0;
             padding: 0;
+            box-sizing: border-box;
         }
 
         *,
@@ -102,11 +103,9 @@
             background: #fff;
             text-align: center;
             padding: 20px;
-            position: absolute;
-            left: 0;
-            bottom: 0;
             width: 100%;
             box-sizing: border-box;
+            margin-top: 200px;
         }
 
         #footer a {
@@ -187,7 +186,16 @@
             box-sizing: border-box;
             text-align: center;
             font-family: "Cafe24Dangdanghae";
-            display: none;
+        }
+
+        .quiz__answer .input {
+            width: 100%;
+            border: 6px ridge #cacaca;
+            font-size: 22px;
+            padding: 13px 20px;
+            background-color: #fff;
+            font-family: "Cafe24Dangdanghae";
+            margin-bottom: 10px;
         }
 
         .quiz__view {
@@ -652,6 +660,7 @@
                     </div>
                 </div>
                 <div class="quiz__answer">
+                    <input type="text" class="input" placeholder="정답을 적어주세요.">
                     <button class="confirm">정답 확인하기</button>
                     <div class="result"></div>
                 </div>
@@ -670,21 +679,48 @@
         const quizType = document.querySelector(".quiz__type");                     // 퀴즈 종류
         const quizNumber = document.querySelector(".quiz__question .number");       // 퀴즈 번호
         const quizAsk = document.querySelector(".quiz__question .ask");             // 퀴즈 질문
-        const quizConfirm = document.querySelector(".quiz__answer .confirm");     // 정답 확인 버튼
-        const quizResult = document.querySelector(".quiz__answer .result");       // 정답 결과
+        const quizConfirm = document.querySelector(".quiz__answer .confirm");       // 정답 확인 버튼
+        const quizResult = document.querySelector(".quiz__answer .result");         // 정답 결과
+        const quizInput = document.querySelector(".quiz__answer .input");           // 사용자 정답
         const quizDog = document.querySelector(".quiz__view .dog");                 // 강아지
 
         // 문제 정보
         const answerType = "웹디자인기능사";
         const answerNum = "2";
         const answerAsk = "기업의 새로운 이념 구축에 필요한 이미지와 커뮤니케이션 시스템을 의도적, 계획적으로 만들어내는 기업이미지통합 전략은 무엇인가요?";
-        const answerResult = "CIP";
+        let answerResult = "CIP";
 
         // 문재 출력
         quizType.textContent = answerType;
-        quizNumber.textContent = answerNum;
+        quizNumber.textContent = answerNum + ". ";
         quizAsk.textContent = answerAsk;
-        quizResult.textContent = answerResult;
+        quizResult.textContent = answerResult.toLowerCase();
+
+        // 정답 숨기기
+        quizResult.style.display = "none";
+
+        // 정답 확인
+        // 정답 버튼을 클릭 시
+        quizConfirm.addEventListener("click", () => {
+
+            // 사용자 정답
+            const userWord = quizInput.value.toLowerCase().trim(); // 소문자 치환 및 여백 삭제
+            answerResult = answerResult.toLowerCase().trim();
+
+            console.log(userWord)
+            console.log(answerResult)
+
+            // 사용자 정답 == 문제 정답
+            if(userWord == answerResult) {
+                // 정답
+                quizDog.classList.add("like");
+                //alert("정답입니다.")
+            } else {
+                // 오답
+                quizDog.classList.add("dislike");
+                //alert("오답입니다.")
+            }
+        });
     </script>
 </body>
 
