--- a/javascript/effect/quizeffect02.html
+++ b/javascript/effect/quizeffect02.html
@@ -200,6 +200,30 @@
 
         .quiz__view {
             background-color: #f5f5f5;
+            font-family: "Cafe24Dangdanghae";
+            position: relative;
+        }
+        .quiz__view .true {
+            width: 120px;
+            height: 120px;
+            line-height: 120px;
+            background-color: rgb(87, 79, 196);
+            border-radius: 50%;
+            text-align: center;
+            position: absolute;
+            left: 70%;
+            top: 100px;
+        }
+        .quiz__view .false {
+            width: 120px;
+            height: 120px;
+            line-height: 120px;
+            background-color: #fff;
+            border-radius: 50%;
+            text-align: center;
+            position: absolute;
+            right: 70%;
+            top: 100px;
         }
 
         /* dog */
@@ -640,6 +664,8 @@
                     </div>
                 </h2>
                 <div class="quiz__view">
+                    <div class="true">정답입니다.</div>
+                    <div class="false">오답입니다.</div>
                     <div class="dog">
                         <div class="head">
                             <div class="ears"></div>
@@ -707,8 +733,8 @@
             const userWord = quizInput.value.toLowerCase().trim(); // 소문자 치환 및 여백 삭제
             answerResult = answerResult.toLowerCase().trim();
 
-            console.log(userWord)
-            console.log(answerResult)
+            // console.log(userWord)
+            // console.log(answerResult)
 
             // 사용자 정답 == 문제 정답
             if(userWord == answerResult) {
