--- a/javascript/effect/quizeffect01.html
+++ b/javascript/effect/quizeffect01.html
@@ -68,7 +68,7 @@
     <!-- //main -->
 
     <footer id="footer">
-        <a href="mailto:webstoryboy@naver.com">webstoryboy@naver.com</a>
+        <a href="mailto:ipkg7210@gmail.com">ipkg7210@gmail.com</a>
     </footer>
     <!-- //footer -->
 
