--- a/javascript/study/quiz01.html
+++ b/javascript/study/quiz01.html
@@ -16,60 +16,17 @@
                 자바스크립트를 이용해 퀴즈 형태 방식을 코딩
             </p>
 
-            <hr>
-
-
-            <h3 class="t_tit2">font 구성</h3>
-            <p class="t_box">
-                &lt;link href="https://webfontworld.github.io/DungGeunMo/DungGeunMo.css" rel="stylesheet"><br>
-                &lt;link href="https://webfontworld.github.io/Cafe24Dangdanghae/Cafe24Dangdanghae.css" rel="stylesheet">
-            </p>
-
-            <h3 class="t_tit2">main 구성</h3>
-            <p class="t_desc2">
-                각 class 값의 이름을 부여
-            </p>
-            <div class="t_code">
-<pre><code code="language.js">    &lt;div class="quiz__wrap"&gt;
-    &lt;div class="quiz"&gt;
-        &lt;span class="quiz__type"&gt;&lt;/span&gt;
-        &lt;h2 class="quiz__question"&gt;
-            &lt;span class="number"&gt;&lt;/span&gt;
-            &lt;div class="ask"&gt;
-            &lt;/div&gt;
-        &lt;/h2&gt;
-        &lt;div class="quiz__view"&gt;
-            &lt;div class="dog"&gt;
-                &lt;div class="head"&gt;
-                    &lt;div class="ears"&gt;&lt;/div&gt;
-                    &lt;div class="face"&gt;&lt;/div&gt;
-                    &lt;div class="eyes"&gt;
-                        &lt;div class="teardrop"&gt;&lt;/div&gt;
-                    &lt;/div&gt;
-                    &lt;div class="nose"&gt;&lt;/div&gt;
-                    &lt;div class="mouth"&gt;
-                        &lt;div class="tongue"&gt;&lt;/div&gt;
-                    &lt;/div&gt;
-                    &lt;div class="chin"&gt;&lt;/div&gt;
-                &lt;/div&gt;
-                &lt;div class="body"&gt;
-                    &lt;div class="tail"&gt;&lt;/div&gt;
-                    &lt;div class="legs"&gt;&lt;/div&gt;
-                &lt;/div&gt;
-            &lt;/div&gt;
-        &lt;/div&gt;
-        &lt;div class="quiz__answer"&gt;
-            &lt;button class="confirm"&gt;정답 확인하기&lt;/button&gt;
-            &lt;div class="result"&gt;&lt;/div&gt;
-        &lt;/div&gt;
-    &lt;/div&gt;
-    &lt;/div&gt;
-</code></pre>
+            <div class="t_iframe" style="min-height: 500px; padding-top: 0;">
+                <iframe src="" frameborder="0"></iframe>
             </div>
 
-            <h3 class="t_tit2">scirpt 구성</h3>
+            <div class="t_link">
+                <a href="https://github.com/KDB6/ck/blob/main/javascript/effect/quizeffect01.html" target="_blank">원본 사이트 보기</a>
+            </div>
+
+            <h3 class="t_tit2">자바스크립트</h3>
             <p class="t_desc2">
-                1
+
             </p>
             <div class="t_code">
 <pre><code code="language.js">    &lt;script>
@@ -107,7 +64,7 @@
 &lt;/script>
 </code></pre>
             </div>
-            
+
         </div>
     </main>
 
